--- a/oilchemist/src/app/recipes/recipe-detail/recipe-detail.component.less
+++ b/oilchemist/src/app/recipes/recipe-detail/recipe-detail.component.less
@@ -2,5 +2,6 @@
     max-width: 640px;
 }
 .header-badge{
-    font-size: 11px;
+    font-size: 16px;
+    border-radius: 0px;
 }
